# icalevents

./: .gitignore  pyproject.toml
icalevents/: __init__.py  encoding.py  icalparser.py
