[project]
name = "icalevents"
version = "0.2.2"
description = "Simple Python 3 library to download, parse and query iCal sources."
authors = [
    { name = "Dave van Rijn", email = "develop@davevanrijn.nl" },
    { name = "Martin Eigenmann", email = "github@eigenmannmartin.ch" },
    { name = "Thomas Irgang", email = "thomas@irgang.eu" },
    { name = "Alexander Hultnér", email = "ahultner+github@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "icalendar (>=6.3.1)",
    "python-dateutil (>=2.9.0)",
    "pytz (>=2025.2)",
    "urllib3 (>=2.4.0)",
]

[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"
